2008-02-28  Alan D. Salewski  <ASalewski@signatureinfo.com>

	* AUTHORS: new file
	* BUGS: new file
	* COPYING: new file
	* HACKING: new file

	* src/main/perl/cgi-bin/bedrock.cgi: Added file (based on CVS
	  revision 1.3 of the file that formerly existed as
	  src/main/perl/lib/Bedrock/Apache/bedrock.cgi

	* NEWS: Added blurb for upcoming 1.6.6 release

	* BLM/Mail.pm: patched to work with Apache 2.x
	* BLM/Startup/UserSession.pm: likewise
	* Bedrock/Context.pm: likewise
	* Bedrock/Apache/Bedrock.pm: likewise
	* Bedrock/Apache/Request_cgi.pm: likewise
	* Bedrock/SIS/Array.pm: likewise
	* Bedrock/SIS/Hash.pm: likewise
	* Bedrock/Text/TagX/Scalar.pm: likewise
	* Bedrock/Text/TagX/TAG/WithBody/Sink.pm: likewise

	Created new branch for any future bedrock 1.x development:
	    BRANCH_BEDROCK-1-x-development

	Created 1.6.5 CVS tag (on HEAD):
	    bedrock_1-6-5_2008-02-28

	* NEWS: new file

	Created "retro" CVS tag for bedrock 1.6.4:
	    bedrock_1-6-4_2008-02-28-retro-tag
	Note that the above tag was created only on those file

	Temporarily reverted these files to the revsions that were present
	in the bedrock 1.6.4 tarball for the purpose of tagging a 1.6.4
	representation in CVS:
	* src/main/perl/lib/BLM/SIMPLEFTP.pm: rev 1.9 to rev 1.8
	* src/main/perl/lib/Bedrock/Text/TagX/TAG/WithBody/Sink.pm: rev 1.5 to rev 1.4
	* src/main/perl/lib/Bedrock/Text/TagX/Scalar.pm: rev 1.12 to rev 1.9
	* src/main/perl/lib/Bedrock/Text/URLEncode.pm: rev 1.4 to rev 1.3
	* src/main/perl/lib/Bedrock/Apache/Request_cgi.pm: rev 1.5 to rev 1.4

	Temporarily re-added these file from the bedrock 1.6.4 tarball for
	the purpose of tagging a 1.6.4 representation in CVS:
	* src/main/perl/lib/Bedrock/Apache/bedrock.cgi
	* src/main/perl/lib/BLM/List.pm

2008-02-25  Alan D. Salewski  <ASalewski@signatureinfo.com>

	CVS transplanted following files from tree rooted at
	legacy/Bedrock/Bedrock-works
	* bedrock-works/src/main/bedrock/roc/bedrock.jpg
	* bedrock-works/src/main/bedrock/roc/notworking.html