@@ -1,0 +1,69 @@
+$Id$   -*-text-*-
+
+This is the README file for the 'bedrock' project.
+
+Overview
+========
+
+Bedrock is a server side scripting environment that can be used with Apache
+web servers. It allows HTML programmers to create dynamic web pages through
+the use of a small set of HTML-like tags. Bedrock is an enabling technology
+that glues together HTML pages and dynamic data (HTML form data, data from
+databases, and system services) to create web applications.
+
+Bedrock differs significantly from most web application development
+environments that either generate HTML pages as output (e.g. CGIs, Servlets)
+or are themselves programs embedded within HTML pages (e.g. PHP, Mason, ASP,
+etc) by allowing the developer to assemble pages from object oriented
+components.
+
+At the time of writing (2008-02-28), the project is being cleaned up after a
+long period of inactivity. Version 1.6.4 was released in 2001, and since then
+most production environments have been running a variation of that version,
+usually with minor modifications.
+
+Such modifications have been recently collected and tagged in CVS as version
+1.6.5.
+
+The project is currently being revived to allow it to run on Apache 2.x
+version servers (versions through 1.6.5 worked only on Apache 1.3.x).
+
+See the "Prerequisites" section below for other programs that must be
+installed and configured on your system before you can install the 'bedrock'
+package.
+
+
+See the 'BUGS' file for information on reporting bugs.
+
+See the 'INSTALL' file for installation instructions.
+
+See the 'HACKING' file for developer build instructions and the like.
+
+See the 'NEWS' file for changes for this release, and a running list of
+changes from previous releases. Any incompatibilities with previous versions
+will be noted in the 'NEWS' file.
+
+
+Prerequisites
+-------------
+'bedrock' is intended to be built on Unix and Unix-like systems, so expects a
+standard set of utilities (cat, sed, awk, rm, ...) to be present. These
+utilities are not explicitly listed below as prerequisites as they should be
+present on any modern Unix or GNU/Linux system (or Cygwin, if the Universe
+hates you ;-). We also do not explicitly list those Perl modules that are part
+of the core library shipped with Perl (e.g., Data::Dumper, MIME::Base64, etc.)
+
+The various 'bedrock' components are primarily implemented in Perl, so of
+course a Perl installation is needed. Current 'bedrock' development is done
+using Perl 5.8.8, but the bulk of the code was originally developed and tested
+using Perl 5.005, so may work with such earlier versions.
+
+    Prerequisite  Version    Required By     URI
+    ------------  ---------  -----------     ------------------------------
+    Perl 5        >= 5.005   all             ftp://ftp.cpan.org/pub/CPAN/src/perl5.005_04.tar.gz
+
+    DBI           >= 1.13    all             http://www.perl.com/CPAN-local/modules/by-module/DBI/
+    Date::Calc    >= 4.3     BLMs            http://www.perl.com/CPAN-local/modules/by-module/Date/
+    GDBM_File     >= 1.03    BLMs            http://www.perl.com/CPAN-local/modules/by-module/GDBM_File/
+    Net::FTP      >= 2.56    BLMs            http://www.perl.com/CPAN-local/modules/by-module/Net/
+    Net::SMTP     >= 2.15    BLMs            http://www.perl.com/CPAN-local/modules/by-module/Net/
