@@ -1,9 +1,13 @@
 2008-02-28  Alan D. Salewski  <ASalewski@signatureinfo.com>
 
+	Autoconfiscation:
 	* AUTHORS: new file
 	* BUGS: new file
 	* COPYING: new file
 	* HACKING: new file
+	* README: new file
+	* bootstrap: new file
+	* Makefile.am: new file
 
 	* src/main/perl/cgi-bin/bedrock.cgi: Added file (based on CVS
 	  revision 1.3 of the file that formerly existed as
